statum-macros/tests/ui/invalid_machine_wrong_generic.rs
extern crate statum;
use statum::{machine, state};

#[state]
enum MachineState {
    Ready,
}

#[machine]
struct Machine<S: Clone> {
    client: String,
}
